--- a/Classes/View/EventBrite/EBEventCell.xib
+++ b/Classes/View/EventBrite/EBEventCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -7,35 +7,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GHIssueCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="EBEvent" rowHeight="64" id="2" customClass="EBEventCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="EBEvent" rowHeight="74" id="2" customClass="EBEventCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="fYd-fj-LjN">
-                <rect key="frame" x="0.0" y="0.0" width="287" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Analyse en temps réel de vos logs" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" id="3">
-                        <rect key="frame" x="66" y="4" width="225" height="17"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Analyse en temps réel de vos logs" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="221" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                        <rect key="frame" x="66" y="4" width="221" height="17"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <color key="textColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Présentation de l'atelier. Si, comme beaucoup de monde, ..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="24" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="66" y="20" width="221" height="43"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Présentation de l'atelier. Si, comme beaucoup de monde, ..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="221" translatesAutoresizingMaskIntoConstraints="NO" id="24" customClass="TTTAttributedLabel">
+                        <rect key="frame" x="66" y="17" width="221" height="39"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Le 17/12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xNW-Ah-baJ">
-                        <rect key="frame" x="213" y="40" width="74" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Le 17/12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNW-Ah-baJ">
+                        <rect key="frame" x="213" y="49" width="74" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                         <color key="textColor" red="0.85098039219999999" green="0.47450980390000003" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="xNW-Ah-baJ" secondAttribute="trailing" id="4Zd-Tw-tfy"/>
+                    <constraint firstAttribute="trailing" secondItem="24" secondAttribute="trailing" id="6xp-gm-J8T"/>
+                    <constraint firstAttribute="bottom" secondItem="xNW-Ah-baJ" secondAttribute="bottom" constant="3" id="N9R-d5-kLN"/>
+                    <constraint firstItem="3" firstAttribute="leading" secondItem="fYd-fj-LjN" secondAttribute="leading" constant="66" id="Nvl-cd-hcC"/>
+                    <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="R5q-Kd-hDz"/>
+                    <constraint firstItem="3" firstAttribute="top" secondItem="fYd-fj-LjN" secondAttribute="top" constant="4" id="WAJ-d1-YWe"/>
+                    <constraint firstItem="24" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="-1" id="X6G-Kp-0y1"/>
+                    <constraint firstItem="24" firstAttribute="leading" secondItem="fYd-fj-LjN" secondAttribute="leading" constant="66" id="aGp-i3-Bpi"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateLabel" destination="xNW-Ah-baJ" id="7QL-yK-M8M"/>
