--- a/Classes/View/Home/XBNewsEventBriteCell.xib
+++ b/Classes/View/Home/XBNewsEventBriteCell.xib
@@ -1,56 +1,95 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GHIssueCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XBNewsEventBrite" rowHeight="136" id="2" customClass="XBNewsEventBriteCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="136"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="XBNewsEventBrite" rowHeight="70" id="2" customClass="XBNewsEventBriteCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="Z4Z-4A-mMM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="135"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="5bi-qk-Sgu" userLabel="Container View">
-                        <rect key="frame" x="10" y="3" width="300" height="130"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5bi-qk-Sgu" userLabel="Container View">
+                        <rect key="frame" x="10" y="3" width="300" height="64"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="tme-r0-PYk" userLabel="Title View">
-                                <rect key="frame" x="130" y="1" width="169" height="128"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tme-r0-PYk" userLabel="Title View">
+                                <rect key="frame" x="65" y="1" width="234" height="62"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="EventBrite Title" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" id="3">
-                                        <rect key="frame" x="7" y="0.0" width="152" height="39"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="EventBrite Title" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="214" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                                        <rect key="frame" x="10" y="3" width="214" height="21"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="18/12/2013" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUY-gb-2KQ">
+                                        <rect key="frame" x="115" y="38" width="109" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.85098039219999999" green="0.47450980390000003" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="KUY-gb-2KQ" secondAttribute="trailing" constant="10" id="0ai-uO-92u"/>
+                                    <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" constant="8" id="GJw-al-evs"/>
+                                    <constraint firstAttribute="bottom" secondItem="KUY-gb-2KQ" secondAttribute="bottom" constant="3" id="GmJ-MW-dEH"/>
+                                    <constraint firstItem="3" firstAttribute="top" secondItem="tme-r0-PYk" secondAttribute="top" constant="3" id="VFW-2l-9y7"/>
+                                    <constraint firstItem="3" firstAttribute="leading" secondItem="tme-r0-PYk" secondAttribute="leading" constant="10" id="VRv-Xl-tys"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" id="eMY-G7-dli">
-                                <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eMY-G7-dli">
+                                <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="social-001-eventbrite.png" id="iYh-zv-Js5">
-                                        <rect key="frame" x="59" y="59" width="58" height="58"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="social-001-eventbrite.png" translatesAutoresizingMaskIntoConstraints="NO" id="iYh-zv-Js5">
+                                        <rect key="frame" x="7" y="7" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="LWH-pH-paL"/>
+                                            <constraint firstAttribute="width" constant="50" id="w75-nj-KvV"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.32549019607843138" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iYh-zv-Js5" firstAttribute="leading" secondItem="eMY-G7-dli" secondAttribute="leading" constant="7" id="EkV-zA-95R"/>
+                                    <constraint firstAttribute="width" constant="64" id="VpV-HN-KGs"/>
+                                    <constraint firstItem="iYh-zv-Js5" firstAttribute="top" secondItem="eMY-G7-dli" secondAttribute="top" constant="7" id="cUN-EY-VFK"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.81568627450980391" green="0.81568627450980391" blue="0.81568627450980391" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="tme-r0-PYk" firstAttribute="leading" secondItem="eMY-G7-dli" secondAttribute="trailing" id="MVV-12-a8a"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="leading" secondItem="5bi-qk-Sgu" secondAttribute="leading" id="f7M-4c-8ei"/>
+                            <constraint firstItem="tme-r0-PYk" firstAttribute="top" secondItem="5bi-qk-Sgu" secondAttribute="top" constant="1" id="fD3-v0-hzW"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="top" secondItem="5bi-qk-Sgu" secondAttribute="top" id="hir-bu-aZN"/>
+                            <constraint firstAttribute="bottom" secondItem="eMY-G7-dli" secondAttribute="bottom" id="lwl-n6-gDy"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="leading" secondItem="5bi-qk-Sgu" secondAttribute="leading" id="mcC-yM-dSI"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="top" secondItem="5bi-qk-Sgu" secondAttribute="top" id="pwG-vE-RD3"/>
+                            <constraint firstAttribute="bottom" secondItem="tme-r0-PYk" secondAttribute="bottom" constant="1" id="tIK-09-Cbm"/>
+                            <constraint firstAttribute="trailing" secondItem="tme-r0-PYk" secondAttribute="trailing" constant="1" id="vBd-xP-DSL"/>
+                        </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstItem="5bi-qk-Sgu" firstAttribute="leading" secondItem="Z4Z-4A-mMM" secondAttribute="leading" constant="10" id="SvV-UY-bLw"/>
+                    <constraint firstItem="5bi-qk-Sgu" firstAttribute="top" secondItem="Z4Z-4A-mMM" secondAttribute="top" constant="3" id="Vtx-7W-MP2"/>
+                    <constraint firstAttribute="trailing" secondItem="5bi-qk-Sgu" secondAttribute="trailing" constant="10" id="ag8-ek-QlI"/>
+                    <constraint firstAttribute="bottom" secondItem="5bi-qk-Sgu" secondAttribute="bottom" constant="2" id="qId-l6-nIG"/>
+                </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="dateLabel" destination="KUY-gb-2KQ" id="3Oj-Kn-ao4"/>
                 <outlet property="titleLabel" destination="3" id="aTD-4L-H8w"/>
                 <outlet property="titleView" destination="tme-r0-PYk" id="f2a-xm-Yiz"/>
             </connections>
