--- a/Classes/View/Home/XBNewsTwitterCell.xib
+++ b/Classes/View/Home/XBNewsTwitterCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -7,50 +7,87 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GHIssueCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XBNewsTwitter" rowHeight="70" id="2" customClass="XBNewsTwitterCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="XBNewsTwitter" rowHeight="70" id="2" customClass="XBNewsTwitterCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="Z4Z-4A-mMM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="V5d-o2-4c9" userLabel="Container View">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V5d-o2-4c9" userLabel="Container View">
                         <rect key="frame" x="10" y="3" width="300" height="64"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="tme-r0-PYk" userLabel="Title View">
-                                <rect key="frame" x="63" y="1" width="236" height="62"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tme-r0-PYk" userLabel="Title View">
+                                <rect key="frame" x="64" y="1" width="235" height="62"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Twitter Title" lineBreakMode="tailTruncation" numberOfLines="3" adjustsFontSizeToFit="NO" id="3">
-                                        <rect key="frame" x="9" y="6" width="217" height="50"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Twitter Title" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="216" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                                        <rect key="frame" x="9" y="3" width="216" height="21"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="18/12/2013" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbm-DJ-wxt">
+                                        <rect key="frame" x="116" y="38" width="109" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" red="0.85098039219999999" green="0.47450980390000003" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Gbm-DJ-wxt" secondAttribute="trailing" constant="10" id="8oQ-m0-Cre"/>
+                                    <constraint firstItem="3" firstAttribute="leading" secondItem="tme-r0-PYk" secondAttribute="leading" constant="9" id="Qu5-E9-scm"/>
+                                    <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" constant="10" id="X8i-Jo-5vX"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gbm-DJ-wxt" secondAttribute="bottom" constant="3" id="bAl-Fd-hrU"/>
+                                    <constraint firstItem="3" firstAttribute="top" secondItem="tme-r0-PYk" secondAttribute="top" constant="6" id="mbd-xR-0d2"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" id="eMY-G7-dli">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eMY-G7-dli">
                                 <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="social-003_twitter.png" id="iYh-zv-Js5">
-                                        <rect key="frame" x="7" y="6" width="50" height="50"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="social-003_twitter.png" translatesAutoresizingMaskIntoConstraints="NO" id="iYh-zv-Js5">
+                                        <rect key="frame" x="7" y="7" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="I2l-H1-YYZ"/>
+                                            <constraint firstAttribute="width" constant="50" id="bPE-Up-eQU"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.67450980392156867" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iYh-zv-Js5" firstAttribute="leading" secondItem="eMY-G7-dli" secondAttribute="leading" constant="7" id="7iB-Mf-Yl7"/>
+                                    <constraint firstItem="iYh-zv-Js5" firstAttribute="top" secondItem="eMY-G7-dli" secondAttribute="top" constant="7" id="k2S-gE-z5L"/>
+                                    <constraint firstAttribute="width" constant="64" id="kbA-Dk-dV8"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.81568627450980391" green="0.81568627450980391" blue="0.81568627450980391" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="tme-r0-PYk" firstAttribute="top" secondItem="V5d-o2-4c9" secondAttribute="top" constant="1" id="5vH-Mk-J7B"/>
+                            <constraint firstAttribute="bottom" secondItem="tme-r0-PYk" secondAttribute="bottom" constant="1" id="BzQ-nT-2tp"/>
+                            <constraint firstItem="tme-r0-PYk" firstAttribute="leading" secondItem="eMY-G7-dli" secondAttribute="trailing" id="REB-v6-WUE"/>
+                            <constraint firstAttribute="trailing" secondItem="tme-r0-PYk" secondAttribute="trailing" constant="1" id="T0i-7E-dcQ"/>
+                            <constraint firstAttribute="bottom" secondItem="eMY-G7-dli" secondAttribute="bottom" id="U3J-ag-tJr"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="top" secondItem="V5d-o2-4c9" secondAttribute="top" id="cfu-kb-AAE"/>
+                            <constraint firstItem="eMY-G7-dli" firstAttribute="leading" secondItem="V5d-o2-4c9" secondAttribute="leading" id="h8U-61-qmE"/>
+                        </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="V5d-o2-4c9" secondAttribute="bottom" constant="2" id="5XL-iS-z4V"/>
+                    <constraint firstItem="V5d-o2-4c9" firstAttribute="leading" secondItem="Z4Z-4A-mMM" secondAttribute="leading" constant="10" id="Oog-CA-aWJ"/>
+                    <constraint firstAttribute="trailing" secondItem="V5d-o2-4c9" secondAttribute="trailing" constant="10" id="jGy-mK-GMf"/>
+                    <constraint firstItem="V5d-o2-4c9" firstAttribute="top" secondItem="Z4Z-4A-mMM" secondAttribute="top" constant="3" id="l02-Rt-rod"/>
+                </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="dateLabel" destination="Gbm-DJ-wxt" id="L6V-dd-ubf"/>
                 <outlet property="titleLabel" destination="3" id="aTD-4L-H8w"/>
                 <outlet property="titleView" destination="tme-r0-PYk" id="f2a-xm-Yiz"/>
             </connections>
