--- a/Classes/View/Vimeo/VMVideoCell.xib
+++ b/Classes/View/Vimeo/VMVideoCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GHIssueCell"/>
@@ -14,28 +14,48 @@
                 <rect key="frame" x="0.0" y="0.0" width="287" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Video title" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" id="3">
-                        <rect key="frame" x="108" y="4" width="179" height="18"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Lancement des Xebia Mobile Awards" lineBreakMode="tailTruncation" numberOfLines="3" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="179" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                        <rect key="frame" x="108" y="3" width="179" height="21"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <color key="textColor" red="0.37117866849999998" green="0.37117866849999998" blue="0.37117866849999998" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="14">
-                        <rect key="frame" x="100" y="58" width="187" height="16"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Le 17/09" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14">
+                        <rect key="frame" x="97" y="55" width="187" height="16"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
                         <color key="textColor" red="0.85098039219999999" green="0.47450980390000003" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="HD | 298 lectures - 2 likes - 18 commentaires" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="45" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="108" y="15" width="179" height="47"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="HD | 298 lectures" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="115" translatesAutoresizingMaskIntoConstraints="NO" id="45" customClass="TTTAttributedLabel">
+                        <rect key="frame" x="108" y="55" width="115" height="16"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.37117866849999998" green="0.37117866849999998" blue="0.37117866849999998" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ck-rt-hdd" userLabel="Video Image Placeholder">
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="74"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="Y8n-bR-sKq"/>
+                            <constraint firstAttribute="height" constant="74" id="pAG-on-lS5"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="45" firstAttribute="leading" secondItem="6Ck-rt-hdd" secondAttribute="trailing" constant="8" id="2KK-fh-ZN6"/>
+                    <constraint firstItem="6Ck-rt-hdd" firstAttribute="leading" secondItem="6oP-SL-zxP" secondAttribute="leading" id="4ae-Gs-YBc"/>
+                    <constraint firstItem="3" firstAttribute="top" secondItem="6oP-SL-zxP" secondAttribute="top" constant="3" id="4fc-Py-BK9"/>
+                    <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" constant="3" id="EmV-ZK-58u"/>
+                    <constraint firstAttribute="bottom" secondItem="45" secondAttribute="bottom" constant="3" id="IvQ-xC-Iiq"/>
+                    <constraint firstItem="6Ck-rt-hdd" firstAttribute="top" secondItem="6oP-SL-zxP" secondAttribute="top" id="Kcb-aA-6U3"/>
+                    <constraint firstAttribute="bottom" secondItem="14" secondAttribute="bottom" constant="3" id="p1C-nf-Tmj"/>
+                    <constraint firstAttribute="bottom" secondItem="6Ck-rt-hdd" secondAttribute="bottom" id="pBy-H3-fD2"/>
+                    <constraint firstItem="3" firstAttribute="leading" secondItem="6Ck-rt-hdd" secondAttribute="trailing" constant="8" id="qry-2Z-b1Y"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateLabel" destination="14" id="48"/>
